--- a/examples/md-flexible/input/SpinodalDecomposition_equilibration.yaml
+++ b/examples/md-flexible/input/SpinodalDecomposition_equilibration.yaml
@@ -1,12 +1,16 @@
+container                        : [LinkedCells, VarVerletListsAsBuild, VerletClusterLists, VerletLists, VerletListsCells, PairwiseVerletLists]
+verlet-rebuild-frequency         :  4
 functor                          :  Lennard-Jones (12-6)
 cutoff                           :  2.5
 deltaT                           :  0.00182367
-iterations                       :  100000
+iterations                       :  100
 periodic-boundaries              :  true
 Objects:
   CubeGrid:
     0:
-      particles-per-dimension    :  [160, 160, 160]
+      # particles-per-dimension    :  [160, 160, 160]
+      # particles-per-dimension    :  [10, 10, 10]
+      particles-per-dimension    :  [100, 100, 100]
       particle-spacing           :  1.5
       bottomLeftCorner           :  [0, 0, 0]
       velocity                   :  [0, 0, 0]
