--- a/examples/md-flexible/input/drops.yaml
+++ b/examples/md-flexible/input/drops.yaml
@@ -6,9 +6,10 @@ selector-strategy                :  Fastest-Absolute-Value
 # data-layout                      :  [AoS, SoA]
 data-layout                      :  [SoA]
 # Traversals for Release paper:
+traversal                        : [lc_c18, ot_c18]
 # traversal                        :  [ lc_c01, lc_c01_combined_soa, lc_c18, lc_c08, lc_c04_combined_SoA, lc_c04, lc_c04_HCP, lc_sliced, vl_list_iteration, vvl_as_built, vlc_c01, vlc_c18, vlc_sliced, vcl_cluster_iteration, vcl_c01_balanced, vcl_c06 ]
 tuning-strategy                  :  full-Search
-tuning-interval                  :  20001
+tuning-interval                  :  100001
 tuning-samples                   :  0 # 3
 tuning-max-evidence              :  10
 functor                          :  Lennard-Jones (12-6) AVX
@@ -18,7 +19,7 @@ cutoff                           :  2
 # box-max                          :  [7.25, 7.25, 7.25]
 cell-size                        :  [1]
 deltaT                           :  0.0005
-iterations                       :  20000
+iterations                       :  100000
 periodic-boundaries              :  true
 globalForce                      :  [0,0,-12]
 Objects:
@@ -34,60 +35,58 @@ Objects:
       particle-epsilon           :  1
       particle-sigma             :  1
       particle-mass              :  1.79769e+308
-  # top wall
-  #  CubeGrid:
-  #    1:
-  #      particles-per-dimension    :  [51, 31, 1]
-  #      particle-spacing           :  1
-  #      bottomLeftCorner           :  [1, 0, 40]
-  #      velocity                   :  [0, 0, 0]
-  #      particle-type              :  0
-  #      particle-epsilon           :  1
-  #      particle-sigma             :  1
-  #      particle-mass              :  1.79769e+308
   # "water"
   CubeClosestPacked:
     0:
-      particle-spacing           :  1.122462048
+      particle-spacing           :  2 # 1.122462048
       bottomLeftCorner           :  [1, 1, 1]
-      box-length                 :  [98, 78, 3]
+      box-length                 :  [98, 78, 1]
       velocity                   :  [0, 0, 0]
       particle-type              :  1
       particle-epsilon           :  1
       particle-sigma             :  1
       particle-mass              :  1
   Sphere:
-    #0:
-    #  center                     :  [18, 15, 20]
-    # radius                     :  4
-    #  particle-spacing           :  1.122462048
-    #  velocity                   :  [0, 0, 0]
-    #  particle-type              :  2
-    #  particle-epsilon           :  1
-    #  particle-sigma             :  1
-    #  particle-mass              :  1
-    #1:
-    #  center                     :  [60, 15, 20]
-    #  radius                     :  6
-    #  particle-spacing           :  1.122462048
-    #  velocity                   :  [0, 0, 0]
-    #  particle-type              :  2
-    #  particle-epsilon           :  1
-    #  particle-sigma             :  1
-    #  particle-mass              :  1
+    0:
+      center                     :  [10, 20, 30]
+      radius                     :  5
+      particle-spacing           :  1.8 #1.122462048
+      velocity                   :  [0, 0, 0]
+      particle-type              :  2
+      particle-epsilon           :  1
+      particle-sigma             :  1
+      particle-mass              :  1
+    1:
+      center                     :  [30, 50, 15]
+      radius                     :  4
+      particle-spacing           :  1.5 #1.122462048
+      velocity                   :  [0, 0, 0]
+      particle-type              :  2
+      particle-epsilon           :  1
+      particle-sigma             :  1
+      particle-mass              :  1
     2:
-      center                     :  [10, 20, 20]
-      radius                     :  6
-      particle-spacing           :  1.122462048
+      center                     :  [30, 25, 35]
+      radius                     :  3
+      particle-spacing           :  1.7 #1.122462048
       velocity                   :  [0, 0, 0]
       particle-type              :  2
       particle-epsilon           :  1
       particle-sigma             :  1
       particle-mass              :  1
     3:
-      center                     :  [60, 40, 30]
-      radius                     :  15
-      particle-spacing           :  1.122462048
+      center                     :  [60, 40, 25]
+      radius                     :  3
+      particle-spacing           :  1.7
+      velocity                   :  [0, 0, 0]
+      particle-type              :  2
+      particle-epsilon           :  1
+      particle-sigma             :  1
+      particle-mass              :  1
+    4:
+      center                     :  [80, 35, 30]
+      radius                     :  2
+      particle-spacing           :  1.5
       velocity                   :  [0, 0, 0]
       particle-type              :  2
       particle-epsilon           :  1
@@ -100,7 +99,7 @@ Objects:
 #   thermostatInterval             :  10
 #   addBrownianMotion              :  false
 vtk-filename                     :  inhomogeneous
-vtk-write-frequency              :  50
+vtk-write-frequency              :  250
 no-flops                         :  false
 no-end-config                    :  true
-log-level                        :  debug
+log-level                        :  info
