--- a/examples/md-flexible/input/fallingDrop_noIter.yaml
+++ b/examples/md-flexible/input/fallingDrop_noIter.yaml
@@ -7,7 +7,7 @@ selector-strategy                :  Fastest-Absolute-Value
 # Traversals for Release paper:
 # traversal                        :  [ lc_c01, lc_c01_combined_soa, lc_c18, lc_c08, lc_c04_combined_SoA, lc_c04, lc_c04_HCP, lc_sliced, vl_list_iteration, vvl_as_built, vlc_c01, vlc_c18, vlc_sliced, vcl_cluster_iteration, vcl_c01_balanced, vcl_c06 ]
 tuning-strategy                  :  full-Search
-tuning-interval                  :  1000
+tuning-interval                  :  10000
 tuning-samples                   :  3
 tuning-max-evidence              :  10
 functor                          :  Lennard-Jones (12-6)
@@ -16,8 +16,8 @@ cutoff                           :  3
 # box-min                          :  [0, 0, 0]
 # box-max                          :  [7.25, 7.25, 7.25]
 cell-size                        :  [1]
-deltaT                           :  0.0005
-iterations                       :  50000
+deltaT                           :  0 #0.0005
+iterations                       :  10
 periodic-boundaries              :  true
 globalForce                      :  [0,0,-12]
 Objects:
