--- a/examples/md-flexible/input/inhomogeneous_forceInspect.yaml
+++ b/examples/md-flexible/input/inhomogeneous_forceInspect.yaml
@@ -1,5 +1,5 @@
 # container                        :  [DirectSum, LinkedCells, VerletLists, VerletListsCells, VerletClusterLists, VarVerletListsAsBuild]
-verlet-rebuild-frequency         :  10
+verlet-rebuild-frequency         :  4
 verlet-skin-radius               :  0.3
 verlet-cluster-size              :  4
 selector-strategy                :  Fastest-Absolute-Value
@@ -12,20 +12,20 @@ tuning-samples                   :  3
 tuning-max-evidence              :  10
 functor                          :  Lennard-Jones (12-6)
 newton3                          :  [disabled, enabled]
-cutoff                           :  3
+cutoff                           :  2
 # box-min                          :  [0, 0, 0]
 # box-max                          :  [7.25, 7.25, 7.25]
 cell-size                        :  [1]
 deltaT                           :  0.0005
-iterations                       :  50000
+iterations                       :  100
 periodic-boundaries              :  true
 globalForce                      :  [0,0,-12]
 Objects:
   # since md-flex currently has no reflecting boundaries we use walls of particles with infinite (or max double) mass.
   # bottom wall
   CubeGrid:
-    0:  
-      particles-per-dimension    :  [51, 31, 1]
+    0:
+      particles-per-dimension    :  [101, 81, 1]
       particle-spacing           :  1
       bottomLeftCorner           :  [0, 0, 0]
       velocity                   :  [0, 0, 0]
@@ -34,31 +34,58 @@ Objects:
       particle-sigma             :  1
       particle-mass              :  1.79769e+308
   # top wall
-#  CubeGrid:
-#    1:
-#      particles-per-dimension    :  [51, 31, 1]
-#      particle-spacing           :  1
-#      bottomLeftCorner           :  [1, 0, 40]
-#      velocity                   :  [0, 0, 0]
-#      particle-type              :  0
-#      particle-epsilon           :  1
-#      particle-sigma             :  1
-#      particle-mass              :  1.79769e+308
+  #  CubeGrid:
+  #    1:
+  #      particles-per-dimension    :  [51, 31, 1]
+  #      particle-spacing           :  1
+  #      bottomLeftCorner           :  [1, 0, 40]
+  #      velocity                   :  [0, 0, 0]
+  #      particle-type              :  0
+  #      particle-epsilon           :  1
+  #      particle-sigma             :  1
+  #      particle-mass              :  1.79769e+308
   # "water"
   CubeClosestPacked:
-    0:  
+    0:
       particle-spacing           :  1.122462048
       bottomLeftCorner           :  [1, 1, 1]
-      box-length                 :  [48, 28, 10]
+      box-length                 :  [98, 78, 3]
       velocity                   :  [0, 0, 0]
       particle-type              :  1
       particle-epsilon           :  1
       particle-sigma             :  1
       particle-mass              :  1
   Sphere:
-    0:  
-      center                     :  [18, 15, 30]
+    #0:
+    #  center                     :  [18, 15, 20]
+    # radius                     :  4
+    #  particle-spacing           :  1.122462048
+    #  velocity                   :  [0, 0, 0]
+    #  particle-type              :  2
+    #  particle-epsilon           :  1
+    #  particle-sigma             :  1
+    #  particle-mass              :  1
+    #1:
+    #  center                     :  [60, 15, 20]
+    #  radius                     :  6
+    #  particle-spacing           :  1.122462048
+    #  velocity                   :  [0, 0, 0]
+    #  particle-type              :  2
+    #  particle-epsilon           :  1
+    #  particle-sigma             :  1
+    #  particle-mass              :  1
+    2:
+      center                     :  [10, 20, 20]
       radius                     :  6
+      particle-spacing           :  1.122462048
+      velocity                   :  [0, 0, 0]
+      particle-type              :  2
+      particle-epsilon           :  1
+      particle-sigma             :  1
+      particle-mass              :  1
+    3:
+      center                     :  [60, 40, 30]
+      radius                     :  15
       particle-spacing           :  1.122462048
       velocity                   :  [0, 0, 0]
       particle-type              :  2
@@ -71,8 +98,8 @@ Objects:
 #   deltaTemperature               :  0.1
 #   thermostatInterval             :  10
 #   addBrownianMotion              :  false
-vtk-filename                     :  fallingDrop
-vtk-write-frequency              :  500
+vtk-filename                     :  inhomogeneous
+vtk-write-frequency              :  25
 no-flops                         :  false
 no-end-config                    :  true
 log-level                        :  debug
