--- a/.github/workflows/Gcc+Make+Release+OpenMP.yaml
+++ b/.github/workflows/Gcc+Make+Release+OpenMP.yaml
@@ -1,5 +1,5 @@
-# Workflow for unit tests with clang+ninja+address sanitizer
-name: Clang+Ninja+Release+OpenMP+ASan
+# Workflow for unit tests
+name: Gcc+Make+Release+OpenMP
 
 # Controls when the action will run.
 on:
