--- a/.github/workflows/doxygen.yaml
+++ b/.github/workflows/doxygen.yaml
@@ -13,7 +13,7 @@ on:
 jobs:
   build:
     concurrency:
-      group: ${{ github.head_ref }}
+      group: ${{ github.head_ref }}-doxygen
       cancel-in-progress: true
     runs-on: ubuntu-latest
     env:
