--- a/.github/workflows/TestSuites.yaml
+++ b/.github/workflows/TestSuites.yaml
@@ -1,5 +1,5 @@
 # Workflow for unit tests
-name: Tests and Checks
+name: Tests_and_Checks
 
 # Controls when the action will run.
 on:
@@ -11,7 +11,7 @@ on:
     branches: [ master ]
 # abort old runs if a new one is started
 concurrency:
-  group: ${{ github.head_ref }}-Gcc+Make+Release+OpenMP
+  group: ${{ github.head_ref }}-tests
   cancel-in-progress: true
 
 jobs:
