more correct naming of make

--- a/.github/workflows/TestSuites.yaml
+++ b/.github/workflows/TestSuites.yaml
@@ -18,6 +18,7 @@ jobs:
   MatrixJob:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         part: [1, 2]
         config: [
@@ -26,7 +27,7 @@ jobs:
         [autopas-build-clang , clang, clang++, Ninja  , Release, NoOpenMP, ON  , OFF  ],
         [autopas-build-archer, clang, clang++, Ninja  , Release, OpenMP  , OFF , ON   ],
         [autopas-build-clang , clang, clang++, Ninja  , Release, OpenMP  , ON  , OFF  ],
-        [autopas-build-gcc   , gcc  , g++    , Make   , Release, OpenMP  , OFF , OFF  ],
+        [autopas-build-gcc   , gcc  , g++    , "Unix Makefiles", Release, OpenMP  , OFF , OFF  ],
         ]
     container: autopas/${{ matrix.config[0] }}
     steps:
