--- a/.github/workflows/TestSuites.yaml
+++ b/.github/workflows/TestSuites.yaml
@@ -46,7 +46,7 @@ jobs:
             -DAUTOPAS_ENABLE_ADDRESS_SANITIZER=${{ matrix.config[6] }} \
             -DAUTOPAS_ENABLE_THREAD_SANITIZER=${{ matrix.config[7] }} \
             ..
-          entrypoint.sh cmake --build -j 2 .
+          entrypoint.sh cmake --build . --parallel 2 
       - name: Run tests ${{ matrix.part }}/2
         run: |
           cd build
