--- a/.github/workflows/TestSuites.yaml
+++ b/.github/workflows/TestSuites.yaml
@@ -27,7 +27,7 @@ jobs:
         [autopas-build-clang , clang, clang++, Ninja  , Release, NoOpenMP, ON  , OFF  ],
         [autopas-build-archer, clang, clang++, Ninja  , Release, OpenMP  , OFF , ON   ],
         [autopas-build-clang , clang, clang++, Ninja  , Release, OpenMP  , ON  , OFF  ],
-        [autopas-build-gcc   , gcc  , g++    , "Unix Makefiles", Release, OpenMP  , OFF , OFF  ],
+        [autopas-build-gcc   , gcc  , g++    , "'Unix Makefiles'", Release, OpenMP  , OFF , OFF  ],
         ]
     container: autopas/${{ matrix.config[0] }}
     steps:
