--- a/.github/workflows/TestSuites.yaml
+++ b/.github/workflows/TestSuites.yaml
@@ -31,7 +31,7 @@ jobs:
         ]
     container: autopas/${{ matrix.config[0] }}
     env:
-        TSAN_OPTIONS="ignore_noninstrumented_modules=1"
+        TSAN_OPTIONS: "ignore_noninstrumented_modules=1"
     steps:
       - name: Checkout
         uses: actions/checkout@v2
