Add check for examples and reduce tests parallelism to 2

--- a/.github/workflows/TestSuites.yaml
+++ b/.github/workflows/TestSuites.yaml
@@ -97,5 +97,6 @@ jobs:
         run: |
           cd build
           # Start with test 0 or 1 and do every second test
-          ctest --output-on-failure -I ${{ matrix.part }},,2 -j 3
-
+          ctest --output-on-failure -I ${{ matrix.part }},,2 -j 2
+          cd examples
+          ctest -C checkExamples --output-on-failure -I ${{ matrix.part }},,2 -j 2
