Add option AUTOPAS_LINK_WITH_IRC to make antlr compile on cluster
This links autopas with irc which is contained in the intel package. Seems to be necessary for antlr, but isn't there a better solution?

--- a/src/autopas/CMakeLists.txt
+++ b/src/autopas/CMakeLists.txt
@@ -14,6 +14,8 @@ file(
 
 add_library(autopas STATIC ${MY_SRC})
 
+option(AUTOPAS_LINK_WITH_IRC "Links AutoPas with irc from Intel. This is necessary on some clusters." OFF)
+
 target_link_libraries(
     autopas
     PUBLIC
@@ -22,9 +24,9 @@ target_link_libraries(
         $<$<BOOL:${AUTOPAS_OPENMP}>:OpenMP::OpenMP_CXX>
         spdlog::spdlog
         $<$<BOOL:${AUTOPAS_INTERNODE_TUNING}>:MPI::MPI_CXX>
+        $<$<BOOL:${AUTOPAS_LINK_WITH_IRC}>:irc>
         antlr4cpp
         $<$<OR:$<BOOL:${AUTOPAS_INTERNODE_TUNING}>,$<BOOL:${MD_FLEXIBLE_USE_MPI}>>:MPI::MPI_CXX>
-        antlr4cpp
     PRIVATE
         # harmony and Eigen3 are only needed privately when building AutoPas.
         harmony Eigen3
