Implemented reflective boundaries with - ability to set x,y,z boundaries to either periodic or reflective through a yaml file - (successful) testing of periodic and reflective boundaries in mixed boundary conditions

--- a/examples/md-flexible/tests/yamlTestFiles/reflectionTest.yaml
+++ b/examples/md-flexible/tests/yamlTestFiles/reflectionTest.yaml
@@ -1,6 +1,9 @@
 box-min                          :  [0, 0, 0]
 box-max                          :  [5, 5, 5]
 
+reflWidth                        :  0.1
+boundary-type                    :  [periodic, reflective, reflective]
+
 iterations                       :  5000
 Objects:
   CubeGrid:
