--- a/examples/md-flexible/tests/yamlTestFiles/noBoundariesTest.yaml
+++ b/examples/md-flexible/tests/yamlTestFiles/noBoundariesTest.yaml
@@ -1,9 +1,8 @@
 box-min                          :  [0, 0, 0]
 box-max                          :  [5, 5, 5]
 
-boundary-type                    :  [periodic, reflective, reflective]
+boundary-type                    :  [none,none,none]
 
-iterations                       :  5000
 Objects:
   CubeGrid:
     0:
