--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,6 +94,9 @@ add_subdirectory(tools)
 # ruleChecker
 add_subdirectory(ruleChecker)
 
+# tuningLogToSQL
+add_subdirectory(tuningLogToSQL)
+
 # modules needing targets:
 include(autopas_coloring)
 include(autopas_logging)
