Developing a MoleculeInterface.h as a parent class for all molecules - so Simulation can handle multiple molecule types. SoA stuff still needs to be implemented

--- a/src/autopas/CMakeLists.txt
+++ b/src/autopas/CMakeLists.txt
@@ -12,7 +12,7 @@ file(
     "*.cuh"
 )
 
-add_library(autopas STATIC ${MY_SRC})
+add_library(autopas STATIC ${MY_SRC} molecularDynamics/MoleculeInterface.h)
 
 target_link_libraries(
     autopas
