--- a/.github/workflows/doxygen.yaml
+++ b/.github/workflows/doxygen.yaml
@@ -31,6 +31,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build documentation
+        # writes all warnings to warnings.out
         uses: docker://autopas/autopas-build-doxygen
         with:
           entrypoint: buildDocumentation.sh
@@ -39,8 +40,8 @@ jobs:
           args: doc_doxygen${{ matrix.config }} .
 
       - name: Print warnings
-        # Print all warnings collected previously. Exit code depends on number of warnings.
-        run: cat warnings.out && exit $(wc -l warnings.out | cut -d ' ' -f1)
+        # Print all warnings collected previously (except those from README). Exit code depends on number of warnings.
+        run: cat warnings.out | grep -v README && exit $(wc -l warnings.out | cut -d ' ' -f1)
         working-directory: ${{ env.BUILD_DIR }}
 
       - name: Deploy documentation (only on master)
