--- a/.github/workflows/TestSuites.yaml
+++ b/.github/workflows/TestSuites.yaml
@@ -70,6 +70,10 @@ jobs:
         [autopas-build-gcc   , gcc  , g++    ,"'Unix Makefiles'", Release, ON     , OFF , OFF ],
         [autopas-build-gcc   , mpicc, mpic++ ,"'Unix Makefiles'", Release, ON     , ON  , OFF ],
         ]
+        exclude:
+          # MPI has few tests so only one part is needed
+          - config: [autopas-build-gcc   , mpicc, mpic++ ,"'Unix Makefiles'", Release, ON     , ON  , OFF ]
+          - part: 2
     name: Matrix - ${{ matrix.config[1] }}|${{ matrix.config[4] }}|OpenMP=${{ matrix.config[5] }}|ASan=${{ matrix.config[6] }}|TSan=${{ matrix.config[7] }} (${{ matrix.part }}/2)
     container: autopas/${{ matrix.config[0] }}
     env:
@@ -102,11 +106,18 @@ jobs:
           if [ "${{ matrix.config[1] }}" = 'mpicc' ]
           then
             cd build
-            # Start with test 0 or 1 and do every second test
             # only run MPI tests. Apparently mpi in the container doesn't need `--oversubscribe`
-            mpirun -n 3 -prepend-rank ctest --output-on-failure -I ${{ matrix.part }},,2 -R MPIParallelAutoPasTests
+          
+            # workaround until we understand how to combine ctest and MPI
+            mpirun -n 3 -prepend-rank tests/MPIParallelAutoPasTests/runMPITests --gtest_filter=*MPIParallelAutoPasTests*
+          
+            # mpirun -n 3 -prepend-rank ctest --output-on-failure -I ${{ matrix.part }},,2 -R MPIParallelAutoPasTests
             cd examples
-            mpirun -n 3 -prepend-rank ctest -C checkExamples --output-on-failure -I ${{ matrix.part }},,2
+          
+            # workaround until we understand how to combine ctest and MPI
+            mpirun -n 3 -prepend-rank examples/md-flexible/tests/mdFlexTests
+          
+            # mpirun -n 3 -prepend-rank ctest -C checkExamples --output-on-failure -I ${{ matrix.part }},,2
           else
             cd build
             # Start with test 0 or 1 and do every second test
