--- a/examples/sph-mpi/CMakeLists.txt
+++ b/examples/sph-mpi/CMakeLists.txt
@@ -5,17 +5,15 @@ file(
     "*.h"
 )
 
-message(STATUS "sph-mpi: searching for mpi...")
+message(STATUS "sph-main-mpi - searching for mpi...")
 find_package(MPI)
 
 if (NOT ${MPI_CXX_FOUND})
-    message(STATUS "MPI compiler NOT found! Not building sph-main-mpi.")
+    message(STATUS "sph-main-mpi - MPI compiler NOT found. Skipping!")
     return()
 else ()
-    message(STATUS "MPI compiler found: ${MPI_CXX_COMPILER}")
+    message(STATUS "sph-main-mpi - MPI compiler found: ${MPI_CXX_COMPILER}")
 endif ()
-
-include_directories(SYSTEM ${MPI_INCLUDE_PATH})
 
 add_executable(sph-main-mpi ${MY_SRC})
 
@@ -26,7 +24,7 @@ target_link_libraries(sph-main-mpi autopas MPI::MPI_CXX)
 # cmake-format: off
 add_test(
     NAME sph-main-mpi.test
-    COMMAND mpirun -n 4 ./sph-main-mpi | grep "time step" | grep -v "the time step" | tail -1 | grep -q "time step 8"
+    COMMAND ${MPIEXEC_EXECUTABLE} ${MPIEXEC_NUMPROC_FLAG} 4 ./sph-main-mpi | grep "time step" | grep -v "the time step" | tail -1 | grep -q "time step 8"
     CONFIGURATIONS checkExamples checkExamplesMPI
 )
 # cmake-format: on
