--- a/.github/workflows/TestSuites.yaml
+++ b/.github/workflows/TestSuites.yaml
@@ -98,6 +98,7 @@ jobs:
             -DAUTOPAS_ENABLE_THREAD_SANITIZER=${{ matrix.config[7] }} \
             -DAUTOPAS_INTERNODE_TUNING=${UseMPI} \
             -DMD_FLEXIBLE_USE_MPI=${UseMPI} \
+            -DMPIEXEC_PREFLAGS=-prepend-rank \
             ..
           entrypoint.sh cmake --build . --parallel 1 
       - name: Run tests ${{ matrix.part }}/2
@@ -107,17 +108,9 @@ jobs:
           then
             cd build
             # only run MPI tests. Apparently mpi in the container doesn't need `--oversubscribe`
-          
-            # workaround until we understand how to combine ctest and MPI
-            mpirun -n 3 -prepend-rank tests/MPIParallelAutoPasTests/runMPITests --gtest_filter=*MPIParallelAutoPasTests*
-          
-            # mpirun -n 3 -prepend-rank ctest --output-on-failure -I ${{ matrix.part }},,2 -R MPIParallelAutoPasTests
+            ctest --output-on-failure -I ${{ matrix.part }},,2 -R MPIParallelAutoPasTests
             cd examples
-          
-            # workaround until we understand how to combine ctest and MPI
-            mpirun -n 3 -prepend-rank examples/md-flexible/tests/mdFlexTests
-          
-            # mpirun -n 3 -prepend-rank ctest -C checkExamples --output-on-failure -I ${{ matrix.part }},,2
+            ctest -C checkExamples --output-on-failure -I ${{ matrix.part }},,2
           else
             cd build
             # Start with test 0 or 1 and do every second test
